--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -171,3 +171,10 @@ ul {
         border-radius: 25px;
     }
 }
+
+input[type="time"] {
+  padding: 0.6em 0.75em;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
