--- a/src/assets/styles/cmps/add-student.scss
+++ b/src/assets/styles/cmps/add-student.scss
@@ -82,6 +82,11 @@
             gap: 5px;
             align-items: center;
         }
+
+        .submit-btn {
+            padding: 10px;
+            width: 70%;
+        }
     }
 
     @media (max-width:650px) {
