--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import "basics/base";
 @import "basics/links";
 @import "basics/forms";
+@import "basics/flatpickr";
 
 // Components
 @import "cmps/app-header";
