--- a/src/assets/styles/basics/flatpickr.scss
+++ b/src/assets/styles/basics/flatpickr.scss
@@ -10,7 +10,7 @@
 }
 
 .flatpickr-calendar {
-    width: 150px !important;
+    // width: 150px !important;
     border-radius: 15px !important;
 }
 .numInput{
